--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^6.0.1",
+    "@mantine/form": "^6.0.6",
     "@mantine/hooks": "^6.0.1",
     "@mantine/next": "^6.0.1",
+    "@mantine/notifications": "^6.0.6",
+    "@tabler/icons-react": "^2.14.0",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
